# CeleryCourseWork

./: .env.sample  .env.simple  README.md  docker-compose.yaml  manage.py  pyproject.toml
CeleryCW/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CeleryCW/config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_user.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
